syntax = "proto3";

option java_package = "de.stustapay.stustapay.proto";
option java_multiple_files = true;

message InfallibleApiStorageProto {
  bool stored = 1;
  optional InfallibleApiRequestProto request = 2;
}

message InfallibleApiRequestProto {
  string id = 1;
  InfallibleApiRequestKindProto kind = 2;
  InfallibleApiRequestStatus status = 3;
  oneof content {
    InfallibleApiRequestTopUpProto top_up = 4;
    InfallibleApiRequestTicketSaleProto ticket_sale = 5;
  }
}

enum InfallibleApiRequestStatus {
  STATUS_NORMAL = 0;
  STATUS_FAILED = 1;
}

enum InfallibleApiRequestKindProto {
  KIND_TOP_UP = 0;
  KIND_TICKET_SALE = 1;
}

message InfallibleApiRequestTopUpProto {
  double amount = 1;
  string customer_tag_uid = 2;
  string payment_method = 3;
}

message InfallibleApiRequestTicketSaleProto {
  repeated InfallibleApiRequestTagProto customer_tags = 1;
  string payment_method = 2;
}

message InfallibleApiRequestTagProto {
  string uid = 1;
  string pin = 2;
}